# MOS6502Emulator

./: CMakeLists.txt  LICENSE  README.md  test.asm  test.prg  test.txt
MOS6502/6502Lib/: CMakeLists.txt
MOS6502/6502Lib/src/private/: m6502.cpp
MOS6502/6502Lib/src/public/: m6502.h  main_6502.h
MOS6502/6502Test/: CMakeLists.txt  CMakeLists.txt.in
MOS6502/6502Test/googletest-download/: CMakeLists.txt
MOS6502/6502Test/src/: main_6502.cpp  mos6502AddWithCarryTests.cpp  mos6502BranchTests.cpp  mos6502CompareRegisterTests.cpp  mos6502IncrementDecrementOperationsTests.cpp  mos6502JumpsAndCallsTests.cpp  mos6502LoadRegisterTests.cpp  mos6502LogicalOperationsTests.cpp  mos6502ProgramTests.cpp  mos6502RegisterTransfersTests.cpp  mos6502ShiftsTests.cpp  mos6502StackOperationsTests.cpp  mos6502StatusFlagChangesTests.cpp  mos6502StoreRegisterTests.cpp  mos6502SubtractWithCarryTests.cpp  mos6502SystemFunctionsTests.cpp  mos6502Tests.cpp
